--- a/frontend/issues/css/issues.css
+++ b/frontend/issues/css/issues.css
@@ -70,7 +70,8 @@ issues #issuesAddButton {
 
 issues #issuesContent {
   height: 100%;
-  overflow: auto;
+  overflow-y: auto;
+  overflow-x: hidden;
 }
 
 /** Issue *************************************************************************************************************/
@@ -280,15 +281,6 @@ issues-list-item #issuesListItemDescription label {
   color: rgba(0, 0, 0, 0.5);
 }
 
-issues-list-item #issueListItemThumbnail {
-  padding-right: 10px;
-}
-issues-list-item #issueListItemThumbnail img {
-  height: 120px;
-  position: absolute;
-  clip: rect(0px, 250px, 120px, 140px);
-}
-
 issues-list-item #issuesListItemDescription {
   height: 70px;
 }
@@ -297,13 +289,6 @@ issues-list-item #issuesListItemDescription label {
   display: -webkit-box;
   -webkit-line-clamp: 3;
   -webkit-box-orient: vertical;
-}
-
-issues-list-item #issuesListItemStatus {
-  width: 20px;
-  height: 20px;
-  background: green;
-  border-radius: 100px;
 }
 
 issues-list-item #issuesListItemEnter {
@@ -319,11 +304,16 @@ issues-list-item #issuesListItemEnter md-icon {
   color: #FFFFFF;
 }
 
-/** Issue Comp ********************************************************************************************************/
-issue-comp div:first-child {
-  outline: none;
+issues-list-item .issueListItemThumbnail {
+  padding-right: 10px;
+}
+issues-list-item .issueListItemThumbnail img {
+  height: 120px;
+  position: absolute;
+  clip: rect(0px, 250px, 120px, 140px);
 }
 
+/** Issue Comp ********************************************************************************************************/
 issue-comp .issueCompItemContainer {
   padding: 10px;
 }
@@ -338,6 +328,19 @@ issue-comp textarea {
 
 issue-comp .issueComItemStatus {
   margin-right: 5px;
+}
+
+issue-comp .issueCompThumbnail {
+  position: relative;
+  margin-bottom: 120px;
+  outline: none;
+}
+issue-comp .issueCompThumbnail:hover {
+  cursor: pointer;
+}
+issue-comp .issueCompThumbnail img {
+  position: absolute;
+  width: 360px;
 }
 
 /** Issue Screen Shot  ************************************************************************************************/
@@ -366,7 +369,7 @@ issues-screen-shot #issueScreenShotContent {
   overflow: hidden;
 }
 
-issues-screen-shot #issueScreenShotCanvas {
+issues-screen-shot #scribbleCanvas {
   position: absolute;
   top: 0;
 }
