--- a/frontend/issues/jade/issueComp.jade
+++ b/frontend/issues/jade/issueComp.jade
@@ -1,4 +1,5 @@
 div(layout="column", tabindex="0", tdr-focus="true")
+	// Title
 	.issueCompItemContainer(layout="row", layout-align="start start", flex)
 		md-icon.angular-material-icons#issueCompStatus(style="color:{{$ctrl.statusIcon.colour}}") {{$ctrl.statusIcon.icon}}
 		md-input-container.issueComp(flex)
@@ -12,37 +13,61 @@ div(layout="column", tabindex="0", tdr-focus="true")
 			tdr-focus="true"
 			required)
 
+	// Status
 	.issueCompItemContainer(layout="row")
 		md-input-container.issueComItemStatus(flex="30")
 			label Priority
-			md-select(ng-model="$ctrl.issueData.priority", ng-change="$ctrl.setStatusIcon()")
+			md-select(ng-model="$ctrl.issueData.priority", ng-change="$ctrl.setStatusIcon()", ng-disabled="$ctrl.data")
 				md-option(ng-repeat="priority in $ctrl.priorities", value="{{priority.value}}") {{priority.label}}
 		md-input-container.issueComItemStatus(flex)
 			label Status
-			md-select(ng-model="$ctrl.issueData.status", ng-change="$ctrl.setStatusIcon()")
+			md-select(ng-model="$ctrl.issueData.status", ng-change="$ctrl.setStatusIcon()", ng-disabled="$ctrl.data")
 				md-option(ng-repeat="status in $ctrl.statuses", value="{{status.value}}") {{status.label}}
 		md-input-container(flex)
 			label Type
-			md-select(ng-model="$ctrl.issueData.type")
+			md-select(ng-model="$ctrl.issueData.type", ng-disabled="$ctrl.data")
 				md-option(ng-repeat="type in $ctrl.types", value="{{type.value}}") {{type.label}}
 
-	.issueCompItemContainer(layout="row", layout-align="start start", flex)
-		md-input-container.issueComp(flex)
+	// Description
+	.issueCompItemContainer(layout="column", layout-align="start", flex)
+		md-input-container.issueComp(flex, ng-if="!$ctrl.hideDescription")
 			label Description
-			textarea(ng-model="$ctrl.issueData.desc")
+			textarea(ng-model="$ctrl.issueData.desc", ng-disabled="$ctrl.data")
+		.issueCompThumbnail(
+		layout="row"
+		layout-align="center"
+		ng-if="$ctrl.descriptionThumbnail"
+		ng-click="$ctrl.showScreenShot($ctrl.issueData.viewpoint.screenshot)")
+			img(ng-src="{{$ctrl.descriptionThumbnail}}")
 
-	.issueCompItemContainer(layout="row", layout-align="start start", flex, , ng-if="$ctrl.data")
+	// Comments
+	.issueCompItemContainer(layout="column", layout-align="start", flex)
+		div(ng-repeat="comment in $ctrl.issueData.comments", layout="column", layout-align="start", flex)
+			p {{comment.comment}}
+			.issueCompThumbnail(
+			layout="row"
+			layout-align="center"
+			ng-if="comment.viewpoint.screenshot"
+			ng-click="$ctrl.showScreenShot(comment.viewpoint.screenshot)")
+				img(ng-src="{{$ctrl.UtilsService.getServerUrl(comment.viewpoint.screenshot)}}")
+
+	// New comment
+	.issueCompItemContainer(layout="column", layout-align="start", flex, ng-if="$ctrl.data")
 		md-input-container.issueComp(flex)
 			label Comment
-			textarea(ng-model="$ctrl.issueData.comment", required)
-	md-divider
+			textarea(ng-model="$ctrl.comment", ng-required="$ctrl.data", ng-change="$ctrl.commentChange()")
+		.issueCompThumbnail(layout="row", layout-align="center", ng-if="$ctrl.commentThumbnail", ng-click="$ctrl.showThumbnail()")
+			img(ng-src="{{$ctrl.commentThumbnail}}")
 
+	// Footer
 	issues-footer(
 	send-event="$ctrl.sendEvent({type: type, value: value})"
 	submit-disabled="$ctrl.submitDisabled"
 	new-issue="!$ctrl.data"
-	submit="$ctrl.submit()")
+	submit="$ctrl.submit()"
+	screen-shot-save="$ctrl.screenShotSave({screenShot: screenShot})")
 
+// Multi
 issues-multi(
 account="vm.account"
 project="vm.project"
