--- a/frontend/issues/jade/issuesListItem.jade
+++ b/frontend/issues/jade/issuesListItem.jade
@@ -1,12 +1,11 @@
 div(layout="column", layout-fill, ng-click="$ctrl.toggleSelected($event)")
 	#issuesListItemContent(layout='row', flex)
-		#issueListItemThumbnail(flex="33", layout="column", layout-align="center center")
-			img(ng-src="{{$ctrl.screenShot}}")
+		.issueListItemThumbnail(flex="33", layout="column", layout-align="center center")
+			img(ng-src="{{$ctrl.UtilsService.getServerUrl($ctrl.data.viewpoint.screenshot)}}")
 		div(flex, layout="column")
 			label#issuesListItemTitle(flex="none") {{$ctrl.data.title}}
 			#issuesListItemInfo(layout="row", layout-align="start center", flex="none")
 				div(flex="15")
-					//#issuesListItemStatus
 					md-icon.angular-material-icons#issueCompStatus(style="color:{{$ctrl.statusIcon.colour}}") {{$ctrl.statusIcon.icon}}
 				label(flex) {{$ctrl.data.owner}}
 				div(layout="row", layout-align="end", flex="30")
