ISSUE #250 - Adding pin works

--- a/frontend/issues/jade/issueComp.jade
+++ b/frontend/issues/jade/issueComp.jade
@@ -1,6 +1,6 @@
 div(layout="column", tabindex="0", tdr-focus="true")
 	// Title
-	.issueCompItemContainer(layout="row", layout-align="start start", flex)
+	.issueCompItemContainer(layout="column", layout-align="start", flex)
 		md-icon.angular-material-icons#issueCompStatus(style="color:{{$ctrl.statusIcon.colour}}") {{$ctrl.statusIcon.icon}}
 		md-input-container.issueComp(flex)
 			label Title
@@ -12,21 +12,24 @@ div(layout="column", tabindex="0", tdr-focus="true")
 			aria-label="Title"
 			tdr-focus="true"
 			required)
+		.issueCompIssueOwner(ng-if="$ctrl.data", layout="row", layout-align="space-between", flex)
+			label {{$ctrl.data.owner}}
+			label {{$ctrl.data.timeStamp}}
 
 	// Status
 	.issueCompItemContainer(layout="row")
-		md-input-container.issueComItemStatus(flex="30")
+		md-input-container.issueCompItemStatus(flex="30")
 			label Priority
 			md-select(ng-model="$ctrl.issueData.priority", ng-change="$ctrl.setStatusIcon()", ng-disabled="$ctrl.data")
 				md-option(ng-repeat="priority in $ctrl.priorities", value="{{priority.value}}") {{priority.label}}
-		md-input-container.issueComItemStatus(flex)
+		md-input-container.issueCompItemStatus(flex)
 			label Status
 			md-select(ng-model="$ctrl.issueData.status", ng-change="$ctrl.setStatusIcon()", ng-disabled="$ctrl.data")
 				md-option(ng-repeat="status in $ctrl.statuses", value="{{status.value}}") {{status.label}}
 		md-input-container(flex)
 			label Type
-			md-select(ng-model="$ctrl.issueData.type", ng-disabled="$ctrl.data")
-				md-option(ng-repeat="type in $ctrl.types", value="{{type.value}}") {{type.label}}
+			md-select(ng-model="$ctrl.issueData.topic_type", ng-disabled="$ctrl.data")
+				md-option(ng-repeat="type in $ctrl.topic_types", value="{{type.value}}") {{type.label}}
 
 	// Description
 	.issueCompItemContainer(layout="column", layout-align="start", flex)
@@ -43,7 +46,10 @@ div(layout="column", tabindex="0", tdr-focus="true")
 	// Comments
 	.issueCompItemContainer(layout="column", layout-align="start", flex)
 		div(ng-repeat="comment in $ctrl.issueData.comments", layout="column", layout-align="start", flex)
-			p {{comment.comment}}
+			label.issueCompCommentTitle {{comment.comment}}
+			.issueCompCommentOwner(ng-if="$ctrl.data", layout="row", layout-align="space-between", flex)
+				label {{comment.owner}}
+				label {{comment.timeStamp}}
 			.issueCompThumbnail(
 			layout="row"
 			layout-align="center"
@@ -60,18 +66,44 @@ div(layout="column", tabindex="0", tdr-focus="true")
 			img(ng-src="{{$ctrl.commentThumbnail}}")
 
 	// Footer
-	issues-footer(
-	send-event="$ctrl.sendEvent({type: type, value: value})"
-	submit-disabled="$ctrl.submitDisabled"
-	new-issue="!$ctrl.data"
-	submit="$ctrl.submit()"
-	screen-shot-save="$ctrl.screenShotSave({screenShot: screenShot})")
+	//issues-footer(
+		send-event="$ctrl.sendEvent({type: type, value: value})"
+		event="$ctrl.event"
+		submit-disabled="$ctrl.submitDisabled"
+		new-issue="!$ctrl.data"
+		submit="$ctrl.submit()"
+		screen-shot-save="$ctrl.screenShotSave({screenShot: screenShot})")
+	.issueCompItemContainer(layout="row", layout-align="space-between center")
+		div
+			md-button.md-icon-button(
+			ng-repeat="action in $ctrl.actions"
+			aria-label="{{action.icon}}"
+			ng-click="$ctrl.doAction($index)"
+			ng-disabled="action.disabled")
+				md-tooltip(md-direction="bottom") {{action.label}}
+				md-icon.angular-material-icons(style="color:{{action.color}}") {{action.icon}}
 
-// Multi
-issues-multi(
-account="vm.account"
-project="vm.project"
-selected-object="vm.selectedObject"
-keys-down="vm.keysDown"
-clear="vm.clearMulti"
-send-event="vm.sendEvent(type, value)")
+		div
+			md-button.md-fab.md-mini(aria-label="Submit", ng-disabled="$ctrl.submitDisabled", ng-click="$ctrl.submit()")
+				md-tooltip(md-direction="bottom") Submit
+				md-icon.angular-material-icons save
+
+	div(ng-switch="$ctrl.action")
+		// Multi
+		issues-multi(
+		ng-switch-when="multi"
+		account="$ctrl.account"
+		project="$ctrl.project"
+		selected-object="$ctrl.selectedObject"
+		keys-down="$ctrl.keysDown"
+		clear="vm.clearMulti"
+		send-event="$ctrl.sendEvent({type: type, value: value})"
+		event="$ctrl.event")
+		// Pin
+		issues-pin(
+		ng-switch-when="pin"
+		account="$ctrl.account"
+		project="$ctrl.project"
+		send-event="$ctrl.sendEvent({type: type, value: value})"
+		event="$ctrl.event"
+		set-pin="$ctrl.setPin({data: data})")
