--- a/frontend/issues/jade/issuesListItem.jade
+++ b/frontend/issues/jade/issuesListItem.jade
@@ -1,7 +1,7 @@
 div(layout="column", layout-fill, ng-click="$ctrl.toggleSelected($event)")
 	#issuesListItemContent(layout='row', flex)
-		.issueListItemThumbnail(flex="33", layout="column", layout-align="center center")
-			img(ng-src="{{$ctrl.UtilsService.getServerUrl($ctrl.data.viewpoint.screenshot)}}")
+		.issueListItemThumbnail(flex="40", layout="column", layout-align="center center")
+			img(ng-src="{{$ctrl.UtilsService.getServerUrl($ctrl.data.thumbnail)}}")
 		div(flex, layout="column")
 			label#issuesListItemTitle(flex="none") {{$ctrl.data.title}}
 			#issuesListItemInfo(layout="row", layout-align="start center", flex="none")
