--- a/frontend/issues/jade/issuesList.jade
+++ b/frontend/issues/jade/issuesList.jade
@@ -4,22 +4,29 @@
 	on-edit-issue="vm.editIssue(issue)"
 	select="vm.selectIssue"
 	on-select="vm.issueSelect(issue)")
-.issueListItem(ng-repeat="issue in $ctrl.issuesToShow", layout="column", ng-click="$ctrl.select($event, issue)")
-	#issuesListItemContent(layout='row')
-		.issueListItemThumbnail(flex="40", layout="column", layout-align="center center")
-			img(ng-src="{{$ctrl.UtilsService.getServerUrl(issue.thumbnail)}}")
-		div(flex, layout="column")
-			label#issuesListItemTitle(flex="none") {{$ctrl.IssuesService.generateTitle(issue)}}
-			#issuesListItemInfo(layout="row", layout-align="start center", flex="none")
-				div(flex="15")
-					md-icon.angular-material-icons#issueCompStatus(
-					style="color:{{$ctrl.IssuesService.getStatusIcon(issue).colour}}") {{$ctrl.IssuesService.getStatusIcon(issue).icon}}
-				label(flex) {{issue.owner}}
-				div(layout="row", layout-align="end", flex="30")
-					label {{issue.timeStamp}}
-			#issuesListItemDescription
-				label {{issue.desc}}
-	md-divider
+div(ng-switch="$ctrl.toShow")
+	// List
+	div(ng-switch-when="list")
+		.issueListItem(ng-repeat="issue in $ctrl.issuesToShow", layout="column", ng-click="$ctrl.select($event, issue)")
+			#issuesListItemContent(layout='row')
+				.issueListItemThumbnail(flex="40", layout="column", layout-align="center center")
+					img(ng-src="{{$ctrl.UtilsService.getServerUrl(issue.thumbnail)}}")
+				div(flex, layout="column")
+					label#issuesListItemTitle(flex="none") {{issue.title}}
+					#issuesListItemInfo(layout="row", layout-align="start center", flex="none")
+						div(flex="15")
+							md-icon.angular-material-icons#issueCompStatus(
+							style="color:{{$ctrl.IssuesService.getStatusIcon(issue).colour}}") {{$ctrl.IssuesService.getStatusIcon(issue).icon}}
+						label(flex) {{issue.owner}}
+						div(layout="row", layout-align="end", flex="30")
+							label {{issue.timeStamp}}
+					#issuesListItemDescription
+						label {{issue.desc}}
+			md-divider
 
-	#issuesListItemEnter(ng-if="issue.selected", ng-click="$ctrl.editIssue(issue)", layout="column", layout-align="center center")
-		md-icon.angular-material-icons arrow_forward
+			#issuesListItemEnter(ng-if="issue.selected", ng-click="$ctrl.editIssue(issue)", layout="column", layout-align="center center")
+				md-icon.angular-material-icons arrow_forward
+
+	// Info
+	.cardInfo(ng-switch-when="info")
+		p {{$ctrl.info}}
