ISSUE #250 - removed issuesFooter, issuesList handles menu option

--- a/frontend/issues/jade/issues.jade
+++ b/frontend/issues/jade/issues.jade
@@ -33,7 +33,8 @@ tdr-progress(ng-if="vm.showProgress", info="vm.progressInfo")
 	on-edit-issue="vm.editIssue(issue)"
 	keys-down="vm.keysDown"
 	non-list-select="vm.selectIssue"
-	content-height="vm.setContentHeight(height)")
+	content-height="vm.setContentHeight(height)"
+	menu-option="vm.selectedMenuOption")
 
 	// Issue
 	issue-comp(
