--- a/frontend/issues/css/issues.css
+++ b/frontend/issues/css/issues.css
@@ -309,8 +309,9 @@ issues-list .issueListItemThumbnail {
 }
 
 /** Issue Comp ********************************************************************************************************/
-issue-comp div:first-child {
+issue-comp #issueCompAll {
   outline: none;
+  border-bottom: 1px solid rgba(0, 0, 0, 0.1);
 }
 
 issue-comp .issueCompItemContainer {
@@ -364,6 +365,7 @@ issue-comp .issueCommentWithScreenShot:hover,
 issue-comp .issueDescriptionWithScreenShot:hover {
   background: rgba(0,69,148,.1);
   cursor: pointer;
+  outline: solid 1px rgba(0, 0, 0, 0.2);
 }
 issue-comp .issueCommentWithScreenShot *:hover,
 issue-comp .issueDescriptionWithScreenShot *:hover {
@@ -387,6 +389,8 @@ issues-screen-shot #issueScreenShotActions {
   left: 0;
   right: 0;
   margin: auto;
+  background: rgba(255, 255, 255, 0.8);
+  border-radius: 4px;
 }
 
 issues-screen-shot #issueScreenShotFAIcon {
@@ -395,13 +399,25 @@ issues-screen-shot #issueScreenShotFAIcon {
 
 issues-screen-shot #issueScreenShotContent {
   overflow: hidden;
+  height: calc(100% - 40px);
 }
 
 issues-screen-shot #scribbleCanvas {
   position: absolute;
   top: 0;
+  left: 0;
 }
 
 issues-screen-shot #issueScreenShotImage {
-  width: 100%;
+  max-width: 100%;
+  max-height: 100%;
+}
+
+issues-screen-shot #issueScreenShotPenIndicator {
+  position: absolute;
+  display: block;
+  color: #FFFFFF;
+  font-size: 20px;
+  font-weight: bold;
+  pointer-events: none;
 }
