--- a/frontend/issues/jade/issueComp.jade
+++ b/frontend/issues/jade/issueComp.jade
@@ -1,4 +1,4 @@
-div(layout="column", tabindex="0", tdr-focus="true", flex)
+#issueCompAll(layout="column", tabindex="0", tdr-focus="true", flex)
 	// Title
 	.issueCompItemContainer(layout="column", layout-align="start", flex)
 		md-icon.angular-material-icons#issueCompStatus(style="color:{{$ctrl.statusIcon.colour}}") {{$ctrl.statusIcon.icon}}
@@ -17,19 +17,25 @@ div(layout="column", tabindex="0", tdr-focus="true", flex)
 			label {{$ctrl.data.timeStamp}}
 
 	// Status
-	.issueCompItemContainer(layout="row")
-		md-input-container.issueCompItemStatus(flex="30")
-			label Priority
-			md-select(ng-model="$ctrl.issueData.priority", ng-change="$ctrl.statusChange()", ng-disabled="!$ctrl.canUpdate")
-				md-option(ng-repeat="priority in $ctrl.priorities", value="{{priority.value}}") {{priority.label}}
-		md-input-container.issueCompItemStatus(flex)
-			label Status
-			md-select(ng-model="$ctrl.issueData.status", ng-change="$ctrl.statusChange()", ng-disabled="!$ctrl.canUpdate")
-				md-option(ng-repeat="status in $ctrl.statuses", value="{{status.value}}") {{status.label}}
-		md-input-container(flex)
-			label Type
-			md-select(ng-model="$ctrl.issueData.topic_type", ng-disabled="$ctrl.data")
-				md-option(ng-repeat="type in $ctrl.topic_types", value="{{type.value}}") {{type.label}}
+	.issueCompItemContainer(layout="column")
+		div(layout="row", layout-align="start center")
+			lable Additional information
+			md-button.md-icon-button(aria-label="Status Toggle", ng-click="$ctrl.toggleShowAdditional()")
+				md-icon.angular-material-icons(ng-if="!$ctrl.showAdditional") keyboard_arrow_right
+				md-icon.angular-material-icons(ng-if="$ctrl.showAdditional") keyboard_arrow_down
+		div(layout="row", ng-if="$ctrl.showAdditional")
+			md-input-container.issueCompItemStatus(flex="30")
+				label Priority
+				md-select(ng-model="$ctrl.issueData.priority", ng-change="$ctrl.statusChange()", ng-disabled="!$ctrl.canUpdate")
+					md-option(ng-repeat="priority in $ctrl.priorities", value="{{priority.value}}") {{priority.label}}
+			md-input-container.issueCompItemStatus(flex)
+				label Status
+				md-select(ng-model="$ctrl.issueData.status", ng-change="$ctrl.statusChange()", ng-disabled="!$ctrl.canUpdate")
+					md-option(ng-repeat="status in $ctrl.statuses", value="{{status.value}}") {{status.label}}
+			md-input-container(flex)
+				label Type
+				md-select(ng-model="$ctrl.issueData.topic_type", ng-disabled="!$ctrl.canUpdate")
+					md-option(ng-repeat="type in $ctrl.topic_types", value="{{type.value}}") {{type.label}}
 
 	// Description
 	.issueCompItemContainer(layout="column", layout-align="start", flex)
