--- a/frontend/issues/jade/issueScreenShot.jade
+++ b/frontend/issues/jade/issueScreenShot.jade
@@ -6,20 +6,25 @@ md-toolbar
 		span(flex)
 		md-button.md-icon-button(ng-click="$ctrl.closeDialog()")
 			md-icon.angular-material-icons(aria-label="Close dialog") close
-md-content#issueScreenShotContent
+md-content#issueScreenShotContent(layout="row", layout-align="center center")
 	img#issueScreenShotImage(ng-src="{{$ctrl.screenShotUse}}")
 	div(ng-if="!$ctrl.screenShot")
 		canvas#scribbleCanvas
-		#issueScreenShotActions(layout="row")
-			md-button.md-fab.md-mini(
+		#issueScreenShotActions(layout="row", style="pointer-events:{{$ctrl.actionsPointerEvents}}")
+			md-button.md-icon-button(
 			ng-repeat="action in $ctrl.actions"
 			aria-label="{{action.icon}}"
-			ng-click="$ctrl.doAction($index)"
-			style="background:{{action.color}}")
+			ng-click="$ctrl.doAction($index)")
 				md-tooltip(md-direction="bottom") {{action.label}}
-				md-icon.angular-material-icons(ng-if="action.icon.indexOf('fa fa-') === -1") {{action.icon}}
-				md-icon#issueScreenShotFAIcon(ng-if="action.icon.indexOf('fa fa-') !== -1", class="fa fa-eraser")
-			md-button.md-fab.md-mini.md-primary(ng-click="$ctrl.save()")
+				md-icon.angular-material-icons(
+				ng-if="action.icon.indexOf('fa fa-') === -1"
+				style="color:{{action.color}}") {{action.icon}}
+				md-icon#issueScreenShotFAIcon(
+				ng-if="action.icon.indexOf('fa fa-') !== -1"
+				class="fa fa-eraser"
+				style="color:{{action.color}}")
+			md-button.md-fab.md-mini(ng-click="$ctrl.save()")
 				md-icon.angular-material-icons(aria-label="Save") save
 
 canvas#screenShotCanvas
+md-icon#issueScreenShotPenIndicator(class="fa fa-circle-thin", ng-show="$ctrl.showPenIndicator")
