--- a/frontend/issues/jade/issueScreenShotDialog.jade
+++ b/frontend/issues/jade/issueScreenShotDialog.jade
@@ -3,4 +3,5 @@ md-dialog#issueScreenShotDialog(aria-label="Screen Shot")
 	send-event="vm.dialogCaller.sendEvent({type: type, value: value})"
 	close="vm.closeScreenShot()"
 	screen-shot-save="vm.dialogCaller.screenShotSave({screenShot: screenShot})"
-	screen-shot="vm.dialogCaller.screenShot")
+	screen-shot="vm.dialogCaller.screenShot"
+	layout-fill)
