ISSUE #250 - Delete/edit comments

--- a/frontend/issues/css/issues.css
+++ b/frontend/issues/css/issues.css
@@ -360,8 +360,16 @@ issue-comp .issueCompCommentOwner label {
   color: rgba(0, 0, 0, 0.5);
 }
 
+issue-comp .issueCompComment {
+  margin: 10px 0;
+}
+
 issue-comp .issueCompCommentTitle {
-  margin: 10px 0 5px;
+  margin: 10px 0;
+}
+
+issue-comp .issueCompCommentActions {
+  z-index: 2;
 }
 
 issue-comp .issueCommentWithScreenShot:hover,
