ISSUE #258 - Button added and it's working

--- a/frontend/rightPanel/jade/rightPanel.jade
+++ b/frontend/rightPanel/jade/rightPanel.jade
@@ -7,6 +7,10 @@
 		label {{value.label}}
 
 	.rightPanelButtonGroup(layout="column", layout-align="start center")
+		md-button.md-accent.md-fab.md-mini(aria-label="Meta", ng-click="vm.toggleAutoMetaData()", style="background:{{vm.metaBackground}}")
+			md-tooltip(md-direction="left") Meta Data
+			md-icon.angular-material-icons content_copy
+		label Meta
 		md-button.md-accent.md-fab.md-mini(aria-label="Measure", ng-click="vm.toggleMeasure()", style="background:{{vm.measureBackground}}")
 			md-tooltip(md-direction="left") Measure
 			md-icon.angular-material-icons straighten
