--- a/frontend/project/jade/project.jade
+++ b/frontend/project/jade/project.jade
@@ -1,8 +1,8 @@
 //.container-fluid#project(global ng-if="!vm.state.bid4free")
 
 // tabindex is required for ng-keydown to work on a div/directive
-div(ng-keydown="vm.keyAction($event)", ng-keyup="vm.keyAction($event)", tabindex="0")
-	#project-viewport-container.row
+div(ng-keydown="vm.keyAction($event)", ng-keyup="vm.keyAction($event)")
+	#project-viewport-container.row(tabindex="0", tdr-focus="true")
 		viewermanager
 
 	#projectUI
@@ -32,3 +32,10 @@ div(ng-keydown="vm.keyAction($event)", ng-keyup="vm.keyAction($event)", tabindex
 		bottom-buttons(style="pointer-events:{{vm.pointerEvents}}")
 		qr-code-reader
 
+multi-select(
+account="vm.account"
+project="vm.project"
+keys-down="vm.keysDown"
+send-event="vm.sendEvent(type, value)"
+event="vm.event"
+set-multi="vm.setMulti(data)")
