--- a/frontend/panel/jade/panel.jade
+++ b/frontend/panel/jade/panel.jade
@@ -10,7 +10,9 @@ div(ng-show="vm.showPanel")
 			content-data='contentItem'
 			ng-show='contentItem.show',
 			on-height-request="vm.heightRequest(contentItem, height)"
-			keys-down="vm.keysDown")
+			keys-down="vm.keysDown"
+			selected-objects="vm.selectedObjects"
+			set-initial-selected-objects="vm.setInitialSelectedObjects({selectedObjects: selectedObjects})")
 
 			div(ng-if="contentItem.showGap", style="display:block; height:20px;")
 	div#buttons(ng-class="{ active : vm.activate }", ng-if="vm.position==='left'")
