--- a/frontend/project/jade/project.jade
+++ b/frontend/project/jade/project.jade
@@ -18,7 +18,9 @@ div(ng-keydown="vm.keyAction($event)", ng-keyup="vm.keyAction($event)")
 		revision="vm.revision"
 		position="left"
 		style="pointer-events:{{vm.pointerEvents}}"
-		keys-down="vm.keysDown")
+		keys-down="vm.keysDown"
+		selected-objects="vm.selectedObjects"
+		set-initial-selected-objects="vm.setInitialSelectedObjects({selectedObjects: selectedObjects})")
 
 		panel#rightPanel(
 		account="vm.account"
@@ -38,4 +40,5 @@ project="vm.project"
 keys-down="vm.keysDown"
 send-event="vm.sendEvent(type, value)"
 event="vm.event"
-set-multi="vm.setMulti(data)")
+set-selected-objects="vm.setSelectedObjects(selectedObjects)"
+initial-selected-objects="vm.initialSelectedObjects")
