--- a/frontend/tree/jade/tree.jade
+++ b/frontend/tree/jade/tree.jade
@@ -3,7 +3,7 @@ tdr-progress(ng-if="vm.showProgress", info="vm.progressInfo")
 
 // Tree
 .virtualRepeatInfiniteScroll(ng-show="vm.showTree")
-	md-virtual-repeat-container.vertical-container(md-top-index="vm.topIndex", ng-if="vm.showNodes")
+	md-virtual-repeat-container.vertical-container(md-top-index="vm.topIndex", ng-show="vm.showNodes")
 		// .treeNodes(md-virtual-repeat="item in vm.infiniteItemsTree" md-on-demand="" class="repeated-item")
 		.treeNodes.repeated-item(md-virtual-repeat="item in vm.nodesToShow")
 			.treeNode(style="margin-left:{{item.level * 20}}px", ng-if="item.name", layout="row", layout-align="start center", flex)
