ISSUE #250 - User with same role as issue creator role can update issue

--- a/frontend/issues/jade/issues.jade
+++ b/frontend/issues/jade/issues.jade
@@ -42,5 +42,6 @@ tdr-progress(ng-if="vm.showProgress", info="vm.progressInfo")
 	issue-created="vm.issueCreated(issue)"
 	content-height="vm.setContentHeight(height)"
 	selected-objects="vm.selectedObjects"
-	set-initial-selected-objects="vm.setInitialSelectedObjects({selectedObjects: selectedObjects})")
+	set-initial-selected-objects="vm.setInitialSelectedObjects({selectedObjects: selectedObjects})"
+	user-roles="vm.projectUserRoles")
 
