--- a/frontend/account/jade/uploadProjectDialog.jade
+++ b/frontend/account/jade/uploadProjectDialog.jade
@@ -10,6 +10,7 @@ md-dialog.newProjectDialog(aria-label="New project")
 
 			md-input-container
 				input(placeholder="Revision name", ng-model="vm.tag")
+				.inputHint Letters, numbers and underscore only
 
 			md-input-container
 				textarea(placeholder="Revision description", ng-model="vm.desc")
