--- a/jade/frontend.jade
+++ b/jade/frontend.jade
@@ -7,7 +7,7 @@ html(lang="en" ng-app="3drepo")
 		meta(charset='utf-8')
 		meta(http-equiv='X-UA-Compatible', content='IE=edge')
 
-		title 3D Repo
+		title 3D Repo | Online BIM collaboration platform
 
 		script(type="text/javascript", src="/public/plugins/base/config.js")
 
